@@ -86,7 +86,7 @@ if ($result1) {
     </title>
     <link rel="shortcut icon" href="images/favicon.ico" >
     <link rel="stylesheet" href="style/board18com-160521.css" />
-    <link rel="stylesheet" href="style/board18Market-160521.css" />
+    <link rel="stylesheet" href="style/board18Market-160525.css" />
     <script type="text/javascript" src="scripts/jquery.js">
     </script> 
     <script type="text/javascript" src="scripts/board18com.js">
@@ -142,10 +142,6 @@ if ($result1) {
           var msg = "Error loading game file. \n";
           alert(msg);
         });
-	if ("ontouchstart" in window) {
-		$('#topofpage').append('<div id="keyShortcut"><input type="text"/></div>');
-	}
-
       });
     </script>    
   </head>
